added with day 3 code: with handlebars

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "dvameka",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "request": "^2.88.0"
   }
 }
